assets/css/style.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

li {
    display: inline;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    padding: 10px;
    font-size: 14px;
    font-weight: 100;
}

h1  {
    background-color: #4aaaa5;
    color: #ffffff;
    font-family: 'Georgia', 'Times', 'Times New Roman' , serif;
    padding: 20px;
}

html    {
    height: 100%;
    margin: 0;
}

body  {
    background-color: lightgrey;
    height: 100%;
    margin: 0;
    padding: 0;
    position: relative;
}  

.nav {
    background-color: #ffffff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
    max-height: 75px;
    overflow: hidden;
}

header {
    background-color: #ffffff;
    border-bottom: 2px solid #cccccc;
    max-height: 75px;
    height: 75px;
}

hr  {
    margin-left: 2%;
    margin-right: 2%;
    border-top: 1px solid #cccccc;
}

.about, .contact-form, .portfolioList {
    background-color: #ffffff;
    margin-top: 2%;
    padding-bottom: 2%;
    width: 960px;
    position: absolute;
    left: 25%;
    right: 25%;
}

h2  {
    margin-left: 2%;
    color: #4aaaa5;
    font-family: 'Georgia', Times, 'Times New Roman', serif;
}

p   {
    margin-left: 2%;
    margin-right: 2%;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 7000;
    line-height: 1.6;
    color: #777777;

}

img {
    float:left;
    margin-right: 10px;
}

.wrapper    {
    min-height: 100%;
    margin-bottom: -50px;
}

footer {
    background-color:#666666;
    border-top: 6px solid #4aaaa5;
    height: 50px;
    position: relative;
}

.push   {
    height: 50px;
}

.copyright {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    color: #cccccc;
    font-size: .5em;
    position: absolute;
    bottom: 2px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: 100px;
}

a {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 600;
    color: #cccccc;
    text-decoration: none;
}

form {
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-weight: 600;
    color: grey;
    margin-left: 2%;
    margin-right: 2%;
    line-height: 1.6;
}

.contactInfo {
    width: 100%;
}

.container  {
    position: relative;
    margin-left: 2%;
    margin-top: 2%;
}

.text-block  {
    position: absolute;
    color: #ffffff;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    width: 200px;
    top: 100px;
}

h4{
    background-color: #4aaaa5;
    padding: 10px;
    text-align: center;
}

